--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 regex = "1.9.1"
 serde_urlencoded = "0.7.1"
+uuid = { version = "1.4.1", features = ["v4"] }
